kubernetes/apps/default/whoami/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whoami
  namespace: default
spec:
  parentRefs:
    - name: kubelab
      namespace: gateway
      sectionName: https
  hostnames:
    - "whoami.kubelab.fi"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: whoami
          port: 80
